solved align issuse

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ h4 {
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .chrt_dt {
@@ -343,10 +345,13 @@ h4 {
 
   .chrt_r_2 {
     flex-direction: column;
+    height: 682px;
+    align-items: center;
   }
   .chrt_r_3 {
-    margin-top: 280px;
     flex-direction: column;
+    height: 834px;
+    align-items: center;
   }
 
   .chrt_wk,
